--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "dotenv": "^16.5.0",
     "firebase": "^11.7.3",
     "genkit": "^1.8.0",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^150.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
     "patch-package": "^8.0.0",
