--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "resend": "^4.5.2",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^5.0.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
