--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "15.2.3",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
+    "react-calendly": "^4.4.0",
     "react-day-picker": "^9.7.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
