Prayer, Donate, Contact, FAQ

--- a/env.example
+++ b/env.example
@@ -80,4 +80,19 @@ NEXTAUTH_URL=https://your-domain.com
 # See README.md for detailed setup instructions
 # =============================================
 
+# Email Configuration
+# Used for sending emails from forms like prayer requests and contact forms.
+# You can use a service like Gmail, SendGrid, Mailgun, etc.
+# Example for Gmail (less secure, requires 'less secure app access' to be enabled):
+# MAIL_HOST="smtp.gmail.com"
+# MAIL_PORT="587"
+# MAIL_USER="youremail@gmail.com"
+# MAIL_PASS="your-app-password"
+
+MAIL_HOST=""
+MAIL_PORT=""
+MAIL_USER=""
+MAIL_PASS=""
+MAIL_FROM="" # e.g., "FBCF Website <no-reply@yourdomain.com>"
+
  
