--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "googleapis": "^150.0.1",
     "lucide-react": "^0.475.0",
     "next": "15.2.3",
+    "nodemailer": "^7.0.4",
     "patch-package": "^8.0.0",
     "react": "^18.3.1",
     "react-calendly": "^4.4.0",
@@ -64,6 +65,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
