--- a/env.example
+++ b/env.example
@@ -95,4 +95,30 @@ MAIL_USER=""
 MAIL_PASS=""
 MAIL_FROM="" # e.g., "FBCF Website <no-reply@yourdomain.com>"
 
+# =============================================
+# ADVANCED FEATURES (Optional)
+# =============================================
+
+# Email Marketing Service (for newsletters)
+# Recommended: Resend.com for simplicity
+# Alternative: SendGrid, Mailchimp
+RESEND_API_KEY=""
+# OR for SendGrid:
+# SENDGRID_API_KEY=""
+# OR for Mailchimp:
+# MAILCHIMP_API_KEY=""
+# MAILCHIMP_SERVER_PREFIX=""
+
+# Analytics and Monitoring
+# Google Analytics 4 - get this from Google Analytics dashboard
+NEXT_PUBLIC_GA_MEASUREMENT_ID=""
+
+# Error Monitoring (Optional)
+# Get from Sentry.io
+NEXT_PUBLIC_SENTRY_DSN=""
+
+# Admin Configuration
+# Email address that should have admin privileges by default
+ADMIN_EMAIL="admin@yourchurch.org"
+
  
