--- a/package.json
+++ b/package.json
@@ -53,9 +53,9 @@
     "google-auth-library": "^9.15.1",
     "googleapis": "^150.0.1",
     "lucide-react": "^0.475.0",
-    "next": "15.2.3",
+    "next": "^15.5.2",
     "next-auth": "^4.24.11",
-    "nodemailer": "^7.0.4",
+    "nodemailer": "^6.10.1",
     "patch-package": "^8.0.0",
     "prisma": "^6.14.0",
     "react": "^18.3.1",
@@ -74,7 +74,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
-    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer": "^6.4.19",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "genkit-cli": "^1.8.0",
